test_suite/alan-2022-examples/failing/001020_mutation.alan
source X begin boolean Z >; relax end
